--- a/css/layout.css
+++ b/css/layout.css
@@ -325,73 +325,73 @@ ul#nav li.current a { color: #F06000; }
    border-radius: 3px 0 0 3px;
 }
 
-.photoshop {
-  	width: 60%;
-  	-moz-animation: photoshop 2s ease;
-  	-webkit-animation: photoshop 2s ease;
+.java {
+  	width: 85%;
+  	-moz-animation: java 2s ease;
+  	-webkit-animation: java 2s ease;
 }
-.illustrator {
-  	width: 55%;
-  	-moz-animation: illustrator 2s ease;
-  	-webkit-animation: illustrator 2s ease;
-}
-.wordpress {
-  	width: 50%;
-  	-moz-animation: wordpress 2s ease;
-  	-webkit-animation: wordpress 2s ease;
-}
-.css {
-  	width: 90%;
-  	-moz-animation: css 2s ease;
-  	-webkit-animation: css 2s ease;
-}
-.html5 {
+.laravel {
   	width: 80%;
-  	-moz-animation: html5 2s ease;
-  	-webkit-animation: html5 2s ease;
+  	-moz-animation: laravel 2s ease;
+  	-webkit-animation: laravel 2s ease;
 }
-.jquery {
-  	width: 50%;
-  	-moz-animation: jquery 2s ease;
-  	-webkit-animation: jquery 2s ease;
+.react {
+  	width: 40%;
+  	-moz-animation: react 2s ease;
+  	-webkit-animation: react 2s ease;
+}
+.csharp {
+  	width: 75%;
+  	-moz-animation: csharp 2s ease;
+  	-webkit-animation: csharp 2s ease;
+}
+.mysql {
+  	width: 80%;
+  	-moz-animation: mysql 2s ease;
+  	-webkit-animation: mysql 2s ease;
+}
+.oracle {
+  	width: 80%;
+  	-moz-animation: oracle 2s ease;
+  	-webkit-animation: oracle 2s ease;
 }
 
-@-moz-keyframes photoshop {
+@-moz-keyframes java {
   0%   { width: 0px;  }
-  100% { width: 60%;  }
+  100% { width: 85%;  }
 }
-@-moz-keyframes illustrator {
-  0%   { width: 0px;  }
-  100% { width: 55%;  }
-}
-@-moz-keyframes wordpress {
-  0%   { width: 0px;  }
-  100% { width: 50%;  }
-}
-@-moz-keyframes css {
-  0%   { width: 0px;  }
-  100% { width: 90%;  }
-}
-@-moz-keyframes html5 {
+@-moz-keyframes laravel {
   0%   { width: 0px;  }
   100% { width: 80%;  }
 }
-@-moz-keyframes jquery {
+@-moz-keyframes react {
   0%   { width: 0px;  }
-  100% { width: 50%;  }
+  100% { width: 40%;  }
+}
+@-moz-keyframes csharp {
+  0%   { width: 0px;  }
+  100% { width: 75%;  }
+}
+@-moz-keyframes mysql {
+  0%   { width: 0px;  }
+  100% { width: 80%;  }
+}
+@-moz-keyframes oracle {
+  0%   { width: 0px;  }
+  100% { width: 80%;  }
 }
 
-@-webkit-keyframes photoshop {
+@-webkit-keyframes java {
   0%   { width: 0px;  }
-  100% { width: 60%;  }
+  100% { width: 85%;  }
 }
-@-webkit-keyframes illustrator {
+@-webkit-keyframes laravel {
   0%   { width: 0px;  }
-  100% { width: 55%;  }
+  100% { width: 80%;  }
 }
-@-webkit-keyframes wordpress {
+@-webkit-keyframes react {
   0%   { width: 0px;  }
-  100% { width: 50%;  }
+  100% { width: 40%;  }
 }
 @-webkit-keyframes css {
   0%   { width: 0px;  }
@@ -401,9 +401,9 @@ ul#nav li.current a { color: #F06000; }
   0%   { width: 0px;  }
   100% { width: 80%;  }
 }
-@-webkit-keyframes jquery {
+@-webkit-keyframes oracle {
   0%   { width: 0px;  }
-  100% { width: 50%;  }
+  100% { width: 80%;  }
 }
 
 /* ------------------------------------------------------------------ */
